Workaround PppmManager issue + fix conf issues
Hopefully, this will let us properly ingest data for the Pi cluster.